Reworked with external spark-mailrecord project dependency for Avro MailRecord Java definitions